swift-package-factory/Examples/InvalidExamples/InvalidBasis.spf
@basis 
let notABasis:[Never] = 0